# relay

./: .gitignore  README.md
.github/workflows/: eval.yml
backend/: .env.example  pyproject.toml
backend/src/: config.py  session.py
backend/src/agent/: core.py  formatting.py  guardrails.py  orchestrator.py  prompts.py  router.py  tools.py
backend/src/api/: schemas.py  server.py
backend/src/db/: __init__.py  connection.py  session_store.py
backend/src/db/migrations/: 001_initial.sql
backend/src/eval/: ci_subset.py  compliance.py  groundedness.py  hallucination.py  harness.py  language_quality.py  models.py  report.py  run_ci_eval.py  test_cases.py
backend/src/knowledge/: accounts.py  agents_data.py  fees.py  models.py  policies.py  rag.py  transactions.py
backend/src/voice/: pipeline.py  realtime.py
backend/tests/: test_api.py  test_db.py  test_eval.py  test_formatting.py  test_guardrails.py  test_knowledge.py  test_orchestrator.py  test_rag.py  test_router.py  test_session.py  test_tools.py  test_voice.py  test_voice_realtime.py
docs/: design-decisions.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/audio/: audio-worklet.d.ts  pcm-capture-processor.ts
frontend/src/components/: AccountSelector.tsx  ChatWindow.tsx  DebugPanel.tsx  LanguageSelector.tsx  MessageBubble.tsx  RecordingPanel.tsx  SampleQueries.tsx  VoiceModeOverlay.tsx  VoiceRecorder.tsx  WaveformCanvas.tsx
frontend/src/hooks/: useChat.ts  useVoice.ts  useVoiceMode.ts
